--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,7 +52,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     // recyclerview
-    implementation 'androidx.recyclerview:recyclerview:1.3.0'
+    implementation 'androidx.recyclerview:recyclerview:1.3.1'
     // cardview
     implementation 'androidx.cardview:cardview:1.0.0'
     // gridlayout
@@ -66,4 +66,8 @@ dependencies {
 
     // Skeleton Layout
     implementation 'com.faltenreich:skeletonlayout:4.0.0'
+
+    // Maps
+    implementation 'com.google.android.libraries.places:places:3.2.0'
+    implementation 'com.google.android.gms:play-services-maps:18.1.0'
 }
