--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,29 +14,31 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Yuhdolanmobile"
         tools:targetApi="31">
-        <activity
-            android:name=".TambahUlasanActivity"
-            android:exported="false" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyCrJHVXgqtdEKI3yqMgHK_eW0QAZKwUYIU" />
 
         <activity
-            android:name=".SingleDestinasiActivity"
-            android:exported="false" />
+            android:name=".TambahUlasanActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"/>
         <activity
-            android:name=".DestinasiShowActivity"
-            android:exported="false" />
+            android:name=".SingleDestinasiActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".DestinasiActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".CategoryActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".DestinasiByCategoryActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".LoginActivity"
             android:exported="false"
